delegate methods protected
